objects/Scientist__c.object
<CustomObject>
    <fields>
        <fullName>ISRO__c</fullName>
        <label>ISRO</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NASA__c</fullName>
        <label>NASA</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Scientist_URL__c</fullName>
        <label>Scientist_URL</label>
        <type>Url</type>
    </fields>
    <label>Scientist</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Scientist Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Scientists</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>